Fixed non-working SPA Changed API Controller to use api route instead of root Removed debug content from index.html

--- a/src/QuickBin.API/appsettings.Development.json
+++ b/src/QuickBin.API/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "QuickBin": {
+    "DB": {
+      "Host": "127.0.0.1",
+      "Port": 22025,
+      "Database": "quickbin",
+      "User": "quickbin",
+      "Password": "quickbin-secure-password"
+    }
   }
+
 }
